Fixed some bugs found with find-bugs
git-svn-id: https://svn.apache.org/repos/asf/axis/axis2/java/rampart/trunk@1051764 13f79535-47bb-0310-9956-ffa450edef68